# Econo_Ass_1

./: .gitignore  Assignment1.ipynb  LICENSE  Q2.ipynb  Q3.ipynb  Q4.ipynb  README.md  pyproject.toml
Data/: Market Return.csv  Market Return.numbers  Stock Return.csv  Stock Return.numbers  Stocks and Market Returns.csv
