[tool.poetry]
name = "econo-ass-1"
version = "0.1.0"
description = ""
authors = ["Charles-Andre Denault <154638364+Cdenault12@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
